remove id from sorting